Add fun cog and extended help command

--- a/config.json
+++ b/config.json
@@ -1,4 +1,6 @@
 {
-    "prefix": "<3.",
-    "version": "0.0.1"
+    "prefix": "a.",
+    "version": "0.0.1",
+    "owner": 510565609805971471,
+    "ownerguild": 694821991483441152
 }
