--- a/config.json
+++ b/config.json
@@ -1,6 +1,9 @@
 {
-    "prefix": "a.",
+    "prefix": "nia ",
     "version": "0.0.1",
-    "owner": 510565609805971471,
-    "ownerguild": 694821991483441152
+    "ownerguilds": [694821991483441152,518732756075937822],
+    "mods": {
+        "tea": 510565609805971471,
+        "ryan": 202209417280749568
+    }
 }
