Changed default prefix

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "prefix": "",
+    "prefix": "nia ",
     "version": "0.0.1",
     "ownerguilds": [694821991483441152,518732756075937822],
     "mods": {
