added economy commands

--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
     "prefix": ".",
-    "version": "0.0.1",
+    "version": "0.2.4",
     "ownerguilds": [694821991483441152,518732756075937822],
-    "mods": {
+    "devs": {
         "tea": 510565609805971471,
         "ryan": 202209417280749568
     }
