--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "prefix": ".",
-    "version": "0.2.4",
+    "prefix": "nia ",
+    "version": "0.7.1",
     "ownerguilds": [694821991483441152,518732756075937822],
     "devs": {
         "tea": 510565609805971471,
